# AnvilKit

./: .augment-guidelines  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PLAN.md  POSITIONING.md  README.md  README_ZH.md  ROADMAP.md  prd.md  publish.sh
crates/anvilkit/: Cargo.toml
crates/anvilkit-app/: Cargo.toml
crates/anvilkit-app/src/: auto_plugins.rs  ecs_app.rs  ecs_plugin.rs  lib.rs  schedule.rs  state.rs  window_size.rs
crates/anvilkit-app/src/egui_integration/: egui_shader.wgsl  mod.rs  renderer.rs  state.rs
crates/anvilkit-app/src/screen/: cursor.rs  mod.rs  plugin.rs
crates/anvilkit-assets/: Cargo.toml
crates/anvilkit-assets/src/: animation.rs  asset_cache.rs  asset_server.rs  audio_asset.rs  dependency.rs  gltf_loader.rs  hot_reload.rs  lib.rs  material.rs  mesh.rs  parsed_asset.rs  procedural.rs  scene.rs  texture.rs
crates/anvilkit-audio/: Cargo.toml
crates/anvilkit-audio/src/: components.rs  engine.rs  lib.rs  systems.rs
crates/anvilkit-camera/: Cargo.toml
crates/anvilkit-camera/src/: controller.rs  effects.rs  input_curve.rs  lib.rs  plugin.rs  systems.rs
crates/anvilkit-camera/src/constraints/: look_at.rs  mod.rs  rail.rs
crates/anvilkit-camera/src/effects/: mod.rs  noise.rs  transition.rs
crates/anvilkit-camera/src/orbit/: mod.rs  rig.rs  spring_arm.rs
crates/anvilkit-core/: Cargo.toml
crates/anvilkit-core/src/: lib.rs
crates/anvilkit-core/src/error/: error.rs  mod.rs
crates/anvilkit-core/src/math/: aabb.rs  constants.rs  frustum.rs  geometry.rs  interpolation.rs  mod.rs  raycast.rs  transform.rs
crates/anvilkit-core/src/persistence/: auto_save.rs  migration.rs  mod.rs  save_manager.rs  settings.rs  storage.rs
crates/anvilkit-core/src/time/: mod.rs  time.rs  timer.rs
crates/anvilkit-data/: Cargo.toml
crates/anvilkit-data/src/: data_table.rs  lib.rs  locale.rs  plugin.rs
crates/anvilkit-describe/: Cargo.toml
crates/anvilkit-describe-derive/: Cargo.toml
crates/anvilkit-describe-derive/src/: lib.rs
crates/anvilkit-describe/src/: lib.rs
crates/anvilkit-ecs/: Cargo.toml
crates/anvilkit-ecs/src/: app.rs  audio.rs  auto_plugins.rs  bundle.rs  component.rs  console.rs  lib.rs  navigation.rs  network.rs  physics.rs  plugin.rs  profiler.rs  scene.rs  schedule.rs  state.rs  system.rs  transform.rs
crates/anvilkit-ecs/src/physics/: aabb.rs  components.rs  events.rs  mod.rs  rapier.rs
crates/anvilkit-gameplay/: Cargo.toml
crates/anvilkit-gameplay/src/: cooldown.rs  entity_pool.rs  health.rs  inventory.rs  lib.rs  stats.rs  status_effect.rs
crates/anvilkit-input/: Cargo.toml
crates/anvilkit-input/src/: action_map.rs  gamepad.rs  input_state.rs  lib.rs
crates/anvilkit-mcp/: Cargo.toml
crates/anvilkit-mcp/src/: lib.rs  plugin.rs  protocol.rs  registry.rs  scene.rs  server.rs  tools.rs
crates/anvilkit-render/: Cargo.toml
crates/anvilkit-render/src/: component.rs  demo_app.rs  lib.rs  plugin.rs  transform.rs
crates/anvilkit-render/src/renderer/: assets.rs  bloom.rs  buffer.rs  buffer_pool.rs  canvas2d.rs  canvas3d.rs  capture.rs  color_grading.rs  context.rs  debug.rs  debug_renderer.rs  device.rs  dof.rs  draw.rs  ibl.rs  line.rs  mod.rs  motion_blur.rs  particle.rs  pipeline.rs  post_process.rs  raycast.rs  scene_renderer.rs  shadow.rs  shared.rs  sprite.rs  ssao.rs  standard_material.rs  state.rs  surface.rs  text.rs  ui.rs
crates/anvilkit-render/src/renderer/draw/: commands.rs  culling.rs  gpu.rs  lighting.rs  mod.rs
crates/anvilkit-render/src/shaders/: bloom_downsample.wgsl  bloom_upsample.wgsl  color_grading.wgsl  debug_lines.wgsl  dof.wgsl  line.wgsl  motion_blur.wgsl  pbr.wgsl  sprite.wgsl  ssao.wgsl  ssao_blur.wgsl  tonemap.wgsl  ui.wgsl
crates/anvilkit-render/src/window/: events.rs  mod.rs  window.rs
crates/anvilkit-render/src/window/events/: gpu_init.rs  input.rs  lighting.rs  mod.rs  render_app.rs  render_loop.rs
crates/anvilkit-ui/: Cargo.toml
crates/anvilkit-ui/src/: events.rs  focus.rs  layout.rs  lib.rs  plugin.rs  style.rs  theme.rs  widgets.rs
crates/anvilkit-ui/src/controls/: checkbox.rs  dropdown.rs  mod.rs  scroll_view.rs  slider.rs  text_input.rs
crates/anvilkit/src/: default_plugins.rs  lib.rs
games/billiards/: Cargo.toml
games/billiards/src/: components.rs  lib.rs  main.rs  resources.rs
games/billiards/src/physics/: collision.rs  dynamics.rs  mod.rs  pocket.rs
games/billiards/src/render/: colors.rs  mod.rs  setup.rs
games/billiards/src/systems/: game_logic.rs  input.rs  mod.rs  ui_update.rs
games/breakout/: Cargo.toml
games/breakout/src/: main.rs
games/craft/: Cargo.toml  anvilkit.toml
games/craft/assets/: craft_tonemap.wgsl  sky.wgsl  voxel.wgsl
games/craft/assets/data/: blocks.ron  locale_en.ron
games/craft/assets/minetest_textures/: LICENSE.md
games/craft/src/: biome.rs  block.rs  chunk.rs  chunk_manager.rs  components.rs  config.rs  crafting.rs  lib.rs  lighting.rs  main.rs  mesh.rs  mob.rs  persistence.rs  raycast.rs  resources.rs  vertex.rs  world_gen.rs  world_manager.rs
games/craft/src/render/: filters.rs  mod.rs  setup.rs
games/craft/src/systems/: camera_fx.rs  day_night.rs  input.rs  mod.rs  physics.rs  survival.rs
games/craft/src/ui/: inventory.rs  main_menu.rs  mod.rs  pause_menu.rs  screen_dispatch.rs  settings_menu.rs  theme.rs
games/flappy/: Cargo.toml
games/flappy/src/: main.rs
games/scene3d/: Cargo.toml
games/scene3d/src/: main.rs
tools/anvilkit-cli/: Cargo.toml
tools/anvilkit-cli/src/: cli.rs  config.rs  error.rs  main.rs  workspace.rs
tools/anvilkit-cli/src/codegen/: component.rs  mod.rs  resource.rs  system.rs
tools/anvilkit-cli/src/commands/: build.rs  check.rs  doctor.rs  generate.rs  mod.rs  new.rs  run.rs
tools/anvilkit-cli/src/templates/: mod.rs  registry.rs
tools/anvilkit-cli/src/templates/3d_basic/: anvilkit.toml.hbs  components.rs.hbs  input.rs.hbs  lib.rs.hbs  main.rs.hbs  resources.rs.hbs  setup.rs.hbs
tools/anvilkit-cli/src/templates/empty/: Cargo.toml.hbs  anvilkit.toml.hbs  lib.rs.hbs  main.rs.hbs
tools/anvilkit-cli/src/templates/first_person/: anvilkit.toml.hbs  colors.rs.hbs  (+6 more)
(+320 files in other folders)
