[package]
name = "anvilkit-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AnvilKit game application runner — handles event loop, input forwarding, and frame lifecycle"

[dependencies]
anvilkit-core = { path = "../anvilkit-core" }
anvilkit-ecs = { path = "../anvilkit-ecs" }
anvilkit-input = { path = "../anvilkit-input" }
anvilkit-render = { path = "../anvilkit-render" }
bevy_ecs = { workspace = true }
winit = { workspace = true }
glam = { workspace = true }
log = "0.4"
