[package]
name = "anvilkit-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AnvilKit game application runner — handles event loop, input forwarding, and frame lifecycle"

[dependencies]
anvilkit-core = { path = "../anvilkit-core", features = ["bevy_ecs"] }
anvilkit-describe = { version = "0.1.0", path = "../anvilkit-describe" }
anvilkit-input = { path = "../anvilkit-input" }
anvilkit-render = { path = "../anvilkit-render" }
bevy_ecs = { workspace = true }
bevy_app = { workspace = true }
winit = { workspace = true }
wgpu = { workspace = true }
glam = { workspace = true }
log = "0.4"
egui = { workspace = true }
egui-winit = { workspace = true }
epaint = { workspace = true }
bytemuck = { workspace = true }
