[package]
name = "anvilkit-assets"
version = "0.1.0"
edition = "2021"
authors = ["AnvilKit Contributors"]
description = "AnvilKit 资源系统 - glTF 模型加载和资源管理"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ketd/AnvilKit"

[dependencies]
anvilkit-core = { path = "../anvilkit-core" }
gltf = { workspace = true }
glam = { workspace = true }
log = "0.4"
