[package]
name = "anvilkit-assets"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "AnvilKit 资源系统 - glTF 模型加载和资源管理"

[dependencies]
anvilkit-core = { path = "../anvilkit-core" }
gltf = { workspace = true }
glam = { workspace = true }
log = "0.4"
