[package]
name = "anvilkit-assets"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Asset system with glTF model loading for AnvilKit game engine"
readme = "../../README.md"

[dependencies]
anvilkit-core = { version = "0.1.0", path = "../anvilkit-core" }
gltf = { workspace = true }
glam = { workspace = true }
log = "0.4"
notify = { workspace = true, optional = true }
bevy_ecs = { workspace = true, optional = true }

[features]
default = []
hot-reload = ["dep:notify"]
bevy_ecs = ["dep:bevy_ecs"]
