[package]
name = "anvilkit-audio"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "AnvilKit 音频系统 - 基于 rodio 的跨平台音频播放"

[dependencies]
anvilkit-ecs = { path = "../anvilkit-ecs" }
bevy_ecs = { workspace = true }
rodio = { version = "0.19", default-features = false, features = ["wav", "vorbis", "mp3"] }
log = "0.4"
