[package]
name = "anvilkit-audio"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Cross-platform audio playback built on rodio for AnvilKit game engine"
readme = "../../README.md"

[dependencies]
anvilkit-core = { version = "0.1.0", path = "../anvilkit-core", features = ["bevy_ecs"] }
anvilkit-describe = { version = "0.1.0", path = "../anvilkit-describe" }
bevy_ecs = { workspace = true }
bevy_app = { workspace = true }
glam = { workspace = true }
rodio = { version = "0.19", default-features = false, features = ["wav", "vorbis", "mp3"] }
log = "0.4"
