[package]
name = "anvilkit-camera"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "AnvilKit camera system - FPS, third-person, orbit, and free camera controllers with effects"
readme = "../../README.md"

[dependencies]
anvilkit-core = { version = "0.1.0", path = "../anvilkit-core", features = ["bevy_ecs"] }
anvilkit-ecs = { version = "0.1.0", path = "../anvilkit-ecs" }
anvilkit-input = { version = "0.1.0", path = "../anvilkit-input" }
anvilkit-render = { version = "0.1.0", path = "../anvilkit-render" }
bevy_ecs = { workspace = true }
glam = { workspace = true }
log = "0.4"
