[package]
name = "anvilkit-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Core types, math library, and time system for AnvilKit game engine"
readme = "../../README.md"

[dependencies]
glam = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, optional = true }
bevy_ecs = { workspace = true, optional = true }

[features]
default = []
# 启用序列化支持
serde = ["dep:serde", "glam/serde"]
# 启用调试功能
debug = []
# Bevy ECS 集成
bevy_ecs = ["dep:bevy_ecs"]

[dev-dependencies]
approx = "0.5"
