[package]
name = "anvilkit-data"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AnvilKit data tables and i18n — RON/JSON data loading and localization"

[dependencies]
bevy_ecs = { workspace = true }
serde = { workspace = true }
ron = { workspace = true }
serde_json = "1.0"
log = "0.4"
