[package]
name = "anvilkit-describe-derive"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Derive macro for AnvilKit Describe trait"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
