[package]
name = "anvilkit-ecs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "AnvilKit ECS 模块 - 基于 Bevy ECS 的高性能实体组件系统"

[dependencies]
# 核心依赖
anvilkit-core = { path = "../anvilkit-core", features = ["bevy_ecs"] }
bevy_ecs = { workspace = true }

# 日志
log = "0.4"

# 数学库
glam = { workspace = true }

# 错误处理
thiserror = { workspace = true }

# 物理引擎（可选）
rapier3d = { workspace = true, optional = true }

# 序列化支持（可选）
serde = { workspace = true, optional = true }

[dev-dependencies]
# 测试依赖
approx = "0.5"

[features]
default = []
# 序列化支持
serde = ["dep:serde", "anvilkit-core/serde", "bevy_ecs/serialize"]
# rapier3d 物理集成
rapier = ["dep:rapier3d"]
# 调试功能
debug = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
