[package]
name = "anvilkit-ecs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "High-performance ECS module built on Bevy ECS for AnvilKit game engine"
readme = "../../README.md"

[dependencies]
# 核心依赖
anvilkit-core = { version = "0.1.0", path = "../anvilkit-core", features = ["bevy_ecs"] }
bevy_ecs = { workspace = true }

# 日志
log = "0.4"

# 数学库
glam = { workspace = true }

# 错误处理
thiserror = { workspace = true }

# 物理引擎（可选）
rapier3d = { workspace = true, optional = true }

# 序列化支持（可选）
serde = { workspace = true, optional = true }

[dev-dependencies]
# 测试依赖
approx = "0.5"

[features]
default = []
# 序列化支持
serde = ["dep:serde", "anvilkit-core/serde", "bevy_ecs/serialize"]
# rapier3d 物理集成
rapier = ["dep:rapier3d"]
# 调试功能
debug = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
