[package]
name = "anvilkit-gameplay"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AnvilKit gameplay systems — health, inventory"

[dependencies]
bevy_ecs = { workspace = true }
anvilkit-describe = { version = "0.1.0", path = "../anvilkit-describe" }
log = "0.4"

[features]
default = ["stats", "inventory"]
stats = []
inventory = []
