[package]
name = "anvilkit-input"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "AnvilKit 输入系统 - 键盘/鼠标/手柄抽象和 action mapping"

[dependencies]
bevy_ecs = { workspace = true }
glam = { workspace = true }
log = "0.4"
winit = "0.30"
