[package]
name = "anvilkit-input"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Keyboard, mouse, and gamepad input abstraction for AnvilKit game engine"
readme = "../../README.md"

[dependencies]
bevy_ecs = { workspace = true }
glam = { workspace = true }
log = "0.4"
winit = "0.30"
