[package]
name = "anvilkit-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "MCP (Model Context Protocol) server for AI-agent interaction with AnvilKit"

[dependencies]
anvilkit-describe = { version = "0.1.0", path = "../anvilkit-describe" }
anvilkit-input = { version = "0.1.0", path = "../anvilkit-input" }
anvilkit-core = { version = "0.1.0", path = "../anvilkit-core", features = ["bevy_ecs"] }
glam = { workspace = true }
bevy_ecs = { workspace = true }
bevy_app = { workspace = true }
serde = { workspace = true }
serde_json = "1"
ron = { workspace = true }
log = "0.4"
