[package]
name = "anvilkit-render"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Cross-platform rendering system built on wgpu and winit for AnvilKit game engine"
readme = "../../README.md"

[dependencies]
# AnvilKit 内部依赖
anvilkit-core = { version = "0.1.0", path = "../anvilkit-core", features = ["bevy_ecs"] }
anvilkit-ecs = { version = "0.1.0", path = "../anvilkit-ecs" }
anvilkit-assets = { version = "0.1.0", path = "../anvilkit-assets" }
anvilkit-input = { version = "0.1.0", path = "../anvilkit-input" }

# ECS 框架（derive 宏需要直接引用）
bevy_ecs = { workspace = true }

# 图形渲染核心
wgpu = "0.19"
winit = "0.30"

# 异步运行时
pollster = "0.3"

# 数学库
glam = { workspace = true }

# 安全的内存布局转换（顶点数据）
bytemuck = { version = "1", features = ["derive"] }

# UI 布局
taffy = "0.4"

# 日志记录
log = "0.4"

# 序列化支持（可选）
# serde = { workspace = true, optional = true }

# 调试工具（可选）
# wgpu-profiler = { version = "0.15", optional = true }

[features]
default = []

# 序列化支持
# serde = ["dep:serde", "anvilkit-core/serde", "glam/serde"]

# 调试和性能分析
debug = []

# 开发模式特性
dev = ["debug"]

[dev-dependencies]
env_logger = "0.10"

[[example]]
name = "hello_ecs"
path = "../../examples/hello_ecs.rs"

[[example]]
name = "hello_pbr_ecs"
path = "../../examples/hello_pbr_ecs.rs"

[[example]]
name = "showcase"
path = "../../examples/showcase.rs"

[[example]]
name = "demo"
path = "../../examples/demo.rs"

[[example]]
name = "game"
path = "../../examples/game.rs"
