[package]
name = "anvilkit-render"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Cross-platform rendering system built on wgpu and winit for AnvilKit game engine"
readme = "../../README.md"

[dependencies]
# AnvilKit 内部依赖
anvilkit-core = { version = "0.1.0", path = "../anvilkit-core", features = ["bevy_ecs"] }
anvilkit-ecs = { version = "0.1.0", path = "../anvilkit-ecs" }
anvilkit-assets = { version = "0.1.0", path = "../anvilkit-assets" }
anvilkit-input = { version = "0.1.0", path = "../anvilkit-input" }
anvilkit-ui = { version = "0.1.0", path = "../anvilkit-ui" }

# ECS 框架（derive 宏需要直接引用）
bevy_ecs = { workspace = true }

# 图形渲染核心
wgpu = "0.19"
winit = "0.30"

# 异步运行时
pollster = "0.3"

# 数学库
glam = { workspace = true }

# 安全的内存布局转换（顶点数据）
bytemuck = { version = "1", features = ["derive"] }

# UI 布局 (通过 anvilkit-ui 间接依赖 taffy)
# taffy = "0.4"  -- removed: now via anvilkit-ui

# 日志记录
log = "0.4"

# 帧捕获（可选）
image = { workspace = true, optional = true }

# 序列化支持（可选）
# serde = { workspace = true, optional = true }

# 调试工具（可选）
# wgpu-profiler = { version = "0.15", optional = true }

[features]
default = []

# 序列化支持
# serde = ["dep:serde", "anvilkit-core/serde", "glam/serde"]

# 调试和性能分析
debug = []

# 开发模式特性
dev = ["debug"]

# 帧捕获（截图/录帧）
capture = ["image"]

[dev-dependencies]
env_logger = "0.10"

[[example]]
name = "hello_ecs"
path = "../../examples/hello_ecs.rs"

[[example]]
name = "hello_pbr_ecs"
path = "../../examples/hello_pbr_ecs.rs"

[[example]]
name = "showcase"
path = "../../examples/showcase.rs"

[[example]]
name = "demo"
path = "../../examples/demo.rs"

[[example]]
name = "game"
path = "../../examples/game.rs"

[[example]]
name = "demo_showcase"
path = "../../examples/demos/demo_showcase.rs"
required-features = ["capture"]

[[example]]
name = "demo_bloom"
path = "../../examples/demos/demo_bloom.rs"
required-features = ["capture"]

[[example]]
name = "demo_ibl"
path = "../../examples/demos/demo_ibl.rs"
required-features = ["capture"]

[[example]]
name = "demo_multi_light"
path = "../../examples/demos/demo_multi_light.rs"
required-features = ["capture"]

[[example]]
name = "demo_pbr"
path = "../../examples/demos/demo_pbr.rs"
required-features = ["capture"]

[[example]]
name = "demo_shadows"
path = "../../examples/demos/demo_shadows.rs"
required-features = ["capture"]

[[example]]
name = "demo_ssao"
path = "../../examples/demos/demo_ssao.rs"
required-features = ["capture"]

[[example]]
name = "demo_dof"
path = "../../examples/demos/demo_dof.rs"
required-features = ["capture"]

[[example]]
name = "demo_motion_blur"
path = "../../examples/demos/demo_motion_blur.rs"
required-features = ["capture"]

[[example]]
name = "demo_color_grading"
path = "../../examples/demos/demo_color_grading.rs"
required-features = ["capture"]

[[example]]
name = "demo_particles"
path = "../../examples/demos/demo_particles.rs"
required-features = ["capture"]

[[example]]
name = "demo_physics"
path = "../../examples/demos/demo_physics.rs"
required-features = ["capture"]

[[example]]
name = "demo_navmesh"
path = "../../examples/demos/demo_navmesh.rs"
required-features = ["capture"]

[[example]]
name = "demo_debug_renderer"
path = "../../examples/demos/demo_debug_renderer.rs"
required-features = ["capture"]

[[example]]
name = "demo_camera_effects"
path = "../../examples/demos/demo_camera_effects.rs"
required-features = ["capture"]
