[package]
name = "anvilkit-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AnvilKit UI framework — retained-mode UI nodes, flexbox layout, events, and widgets"

[dependencies]
bevy_ecs = { workspace = true }
glam = { workspace = true }
taffy = { workspace = true }
log = "0.4"
