[package]
name = "billiards"
version = "0.1.0"
edition = "2021"

[dependencies]
anvilkit-core = { path = "../../crates/anvilkit-core", features = ["bevy_ecs"] }
anvilkit-ecs = { path = "../../crates/anvilkit-ecs" }
anvilkit-render = { path = "../../crates/anvilkit-render" }
anvilkit-assets = { path = "../../crates/anvilkit-assets" }
anvilkit-input = { path = "../../crates/anvilkit-input" }
bevy_ecs = { workspace = true }
glam = { workspace = true }
bytemuck = { version = "1", features = ["derive"] }
wgpu = "0.19"
winit = "0.30"
log = "0.4"
env_logger = "0.10"
