[package]
name = "scene3d"
version.workspace = true
edition.workspace = true

[dependencies]
anvilkit = { version = "0.1.0", path = "../../crates/anvilkit" }
anvilkit-app = { version = "0.1.0", path = "../../crates/anvilkit-app" }
anvilkit-render = { version = "0.1.0", path = "../../crates/anvilkit-render", features = ["capture"] }
anvilkit-input = { version = "0.1.0", path = "../../crates/anvilkit-input" }
anvilkit-mcp = { version = "0.1.0", path = "../../crates/anvilkit-mcp" }
glam = { workspace = true }
